--- a/static/ipynb/Top_Guesses_Metrics.ipynb
+++ b/static/ipynb/Top_Guesses_Metrics.ipynb
@@ -4533,16 +4533,6 @@
      "data": {
       "text/plain": [
        "[{'Rank': 1,\n",
-       "  'First_Guess': 'raise',\n",
-       "  'Win_pct': '92.47%',\n",
-       "  'Avg_Result': 4.62,\n",
-       "  'Wins_On_Try1': 0,\n",
-       "  'Wins_On_Try2': 5,\n",
-       "  'Wins_On_Try3': 71,\n",
-       "  'Wins_On_Try4': 120,\n",
-       "  'Wins_On_Try5': 107,\n",
-       "  'Wins_On_Try6': 53},\n",
-       " {'Rank': 2,\n",
        "  'First_Guess': 'arise',\n",
        "  'Win_pct': '92.47%',\n",
        "  'Avg_Result': 4.58,\n",
@@ -4552,6 +4542,16 @@
        "  'Wins_On_Try4': 133,\n",
        "  'Wins_On_Try5': 97,\n",
        "  'Wins_On_Try6': 50},\n",
+       " {'Rank': 2,\n",
+       "  'First_Guess': 'raise',\n",
+       "  'Win_pct': '92.47%',\n",
+       "  'Avg_Result': 4.62,\n",
+       "  'Wins_On_Try1': 0,\n",
+       "  'Wins_On_Try2': 5,\n",
+       "  'Wins_On_Try3': 71,\n",
+       "  'Wins_On_Try4': 120,\n",
+       "  'Wins_On_Try5': 107,\n",
+       "  'Wins_On_Try6': 53},\n",
        " {'Rank': 3,\n",
        "  'First_Guess': 'arose',\n",
        "  'Win_pct': '91.95%',\n",
@@ -4573,16 +4573,6 @@
        "  'Wins_On_Try5': 104,\n",
        "  'Wins_On_Try6': 45},\n",
        " {'Rank': 5,\n",
-       "  'First_Guess': 'serai',\n",
-       "  'Win_pct': '90.39%',\n",
-       "  'Avg_Result': 4.64,\n",
-       "  'Wins_On_Try1': 0,\n",
-       "  'Wins_On_Try2': 3,\n",
-       "  'Wins_On_Try3': 78,\n",
-       "  'Wins_On_Try4': 118,\n",
-       "  'Wins_On_Try5': 103,\n",
-       "  'Wins_On_Try6': 46},\n",
-       " {'Rank': 6,\n",
        "  'First_Guess': 'aesir',\n",
        "  'Win_pct': '90.39%',\n",
        "  'Avg_Result': 4.61,\n",
@@ -4592,6 +4582,16 @@
        "  'Wins_On_Try4': 134,\n",
        "  'Wins_On_Try5': 91,\n",
        "  'Wins_On_Try6': 45},\n",
+       " {'Rank': 6,\n",
+       "  'First_Guess': 'serai',\n",
+       "  'Win_pct': '90.39%',\n",
+       "  'Avg_Result': 4.64,\n",
+       "  'Wins_On_Try1': 0,\n",
+       "  'Wins_On_Try2': 3,\n",
+       "  'Wins_On_Try3': 78,\n",
+       "  'Wins_On_Try4': 118,\n",
+       "  'Wins_On_Try5': 103,\n",
+       "  'Wins_On_Try6': 46},\n",
        " {'Rank': 7,\n",
        "  'First_Guess': 'rales',\n",
        "  'Win_pct': '90.13%',\n",
@@ -4641,8 +4641,8 @@
    ],
    "source": [
     "# Sort top_guesses_metrics list by Avg_Result\n",
-    "top_guesses_metrics.sort(key=lambda x: x['Avg_Result'], reverse=True)\n",
-    "# Sort top_guesses_metrics list by Win_pct\n",
+    "top_guesses_metrics.sort(key=lambda x: x['Avg_Result'])\n",
+    "# Sort top_guesses_metrics list by Win_pct, descending\n",
     "top_guesses_metrics.sort(key=lambda x: x['Win_pct'], reverse=True)\n",
     "\n",
     "# Add a rank key/value pair to beginning of every guess dict within the list\n",
